@@ -97,7 +97,7 @@ namespace Orthanc
                         HttpMethod method,
                         const UriComponents& uri,
                         const Arguments& headers,
-                        const Arguments& getArguments,
+                        const GetArguments& getArguments,
                         const std::string& postData);
 
     virtual bool InvokeService(_OrthancPluginService service,
